vlib/v/parser/tests/generic_type_alias_decl.out
vlib/v/parser/tests/generic_type_alias_decl.vv:1:1: error: generic type aliases are not yet implemented
    1 | type Pointer<T> = &T
      | ~~~~~~~~~~~~~~~
